Fix SonarQube code quality issues
- Extract constants for duplicated localhost URLs in CorsConfig.java
- Remove unused accountValidationService field from AccountController.java
- Replace Collectors.toList() with Stream.toList() in CardController.java and GlobalExceptionHandler.java
- Remove unused Collectors imports

Resolves 4 SonarQube issues: 2 CRITICAL (string duplication) and 2 MAJOR (unused field, deprecated API usage)

Co-Authored-By: priyadarshini.patil@infosys.com <pdpp58@gmail.com>